 * Fixed 'host' option for zazen, link and img tags.
 * Fixed [url] method to properly include port number and protocol (https).
 * Improved properties and relations managment interfaces.
 * Improved capistrano tasks on site rename.
 * Fixed a bug where cached_role_ids would not be recalculated on rebuild rebuild.
 * Fixed type_cast bug on Time value.

== 1.0.0.rc3 2011-05-26

* Major changes
 * Included tag in xml serialization (tag_names)
 * Added export/import support for Roles/Columns and Relations.
 * Fixed bugs when changing class hierarchy (move rename VirtualClass).
 * Fixed many small bugs and issues (indexing, link date, missed errors, etc).
 * Fixed block edit with ajax ([edit] method).
 * Removed fulltext search (no more MyISAM tables).
 * Fixed SQLiss scoping in queries like "Job:project" (added kpath filter).
 * Fixed Zafu calendar and timezones in dates.
 * Added 'foreach' method (paginated looping in SQLiss query) for console.
 * Added 'count' method (count objects with SQLiss query) for console.
 * Added support for scripts with Zena::Console.
 * Added support for "select" and "having" in SQLiss.
 * Added button to create specialized skin for current page in dev_box.
 * Added 'query_errors' to report dynamic query errors.
 * Created a basic admin interface (backend).
 * Added 'js' tag, fixed many ajax bugs.
 * Added 'crop' tag.
 * On-the-fly creation of specialized template from dev_box.
 * Added 'insert' option for [link].

== 1.0.0.rc2 2011-02-14

* Major changes
 * Fixed Template bug with special '+' modes.
 * Fixed migration bug (should use NULL as brick name for app).
 * Fixed custom query loading bug (when brick is not activated).
 * Fixed Mongrel bug (incompatibility with Rails 2.3.8).

== 1.0.0.rc1 2011-02-11

* Major changes
 * Changed 'date' for 'main_date'
 * Added 'redir' option on node update/create (also added 'mode')

== 1.0.0.beta5

* Major changes
 * Using VirtualClass as proxy for type compilation (RubyLess, Zafu).